# lowbuild

./: .gitignore  Cargo.toml  README.md
src/: build.rs  config.rs  main.rs
test/: lb  lowbuild.ron  lowbuild.toml
test/helloc/: main.c  other.c
test/testcargo/src/: main.rs
