[package]
name = "lowbuild"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.15", features = ["derive"] }
ron = "0.8.1"
serde = { version = "1.0.195", features = ["derive"] }
toml = "0.8.8"

[dependencies.uuid]
version = "1.6.1"
features = ["std", "v5", "v4"]
